--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-requests = 2.22.0
-fake-useragent = 0.1.11
-pyfiglet = 0.8.post1
+requests == 2.22.0
+fake-useragent == 0.1.11
+pyfiglet == 0.8.post1
+terminal_banner == 0.2.0
